code to handle verify happening by task (and time) rather than email

--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -1,15 +1,13 @@
 <div class="container">
   <h2>User: {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}} {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}}</h2>
 
-
     <p>
       {{!-- Modify hours for {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}} {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}}. --}}
       If the volunteering details below are incorrect, please adjust the number and choose Verify. If the work did not occur, please choose Remove.
     </p>
 
-    {{#each @root.data.tasksInfoUnverified}}
+    {{#each (filter @root.data.tasksInfoUnverified "task_id" "valueIn" (split @root.request.params.query.t ",")) }}
     {{#compare unverified_hours_list.length ">=" 1}}
-    {{#compare this.volunteer_manager_email "===" @root.request.params.query.e}}
       Volunteering with <strong>{{organisation_name}}</strong>: {{#if task_description}}Tasks: {{task_description}}, {{/if}} Manager: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}} ({{volunteer_manager_title}})
     <div class="columns">
       <div class="column col-2">
@@ -59,7 +57,6 @@
     </form>
     {{/unless}}
     {{/each ~}}
-    {{/compare}}
     {{/compare}}
     {{/each}}
   </section>
