--- a/configuration/templates/page/test.hbs
+++ b/configuration/templates/page/test.hbs
@@ -29,6 +29,12 @@
   <input type="hidden" name="redirect" id="redirect" value="home" />
 </form>
 
+{{#json}}
+  {{{json key="datetime_to" value=@root.data.verifyHoursInfo.datetime_to}}},
+  {{{json key="user_id" value=@root.request.params.query.user_id}}},
+  {{#json key="task_ids" type="array"}}{{#each (split @root.request.params.query.t ",")}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}{{/json}}
+{{/json}}
+
 
 
 <script type="javascript/blocked" data-component-config="sign-up">
