--- a/configuration/templates/volunteering/apex-verify-hours-body.hbs
+++ b/configuration/templates/volunteering/apex-verify-hours-body.hbs
@@ -1,5 +1,5 @@
 {{#json}}
   {{{json key="datetime_to" value=@root.data.verifyHoursInfo.datetime_to}}},
-  {{{json key="email" value=@root.request.params.query.e}}},
-  {{{json key="user_id" value=@root.request.params.query.user_id}}}
+  {{{json key="user_id" value=@root.request.params.query.user_id}}},
+  {{#json key="task_ids" type="array"}}{{#each (split @root.request.params.query.t ",")}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}{{/json}}
 {{/json}}
