--- a/configuration/partials/emails/welcome-body.html
+++ b/configuration/partials/emails/welcome-body.html
@@ -175,7 +175,7 @@
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
-                                          <p>Hello {{first_name}}, welcome to the {{@root.context.metaData.title}}!</p>
+                                          <p>Hello {{@root.data.accountInfo.first_name}}, welcome to the {{@root.context.metaData.title}}!</p>
                                           <p>{{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
                                           <p>Thank you</p>
                                           <p>{{@root.context.metaData.title}}</p>
