--- a/src/main.scss
+++ b/src/main.scss
@@ -910,23 +910,28 @@ ul.fa-ul {
   .card {
     height: 100%;
   }
-  .fa-ul.hours-info {
-    margin-top: 0;
-    margin-bottom: 0;
-    cursor: default;
-    .popover-container {
-      ul.card-body {
-        padding-top: .6rem;
-        margin-top: 0;
-        margin-bottom: 0;
-        // list-style: disc outside !important;
-      }
+  .card-footer {
+    .btn-link {
+      height: auto;
+      padding: 0;
     }
   }
 }
 .contact.equal-height {
   .card-body {
     padding: 0;
+  }
+}
+.fa-ul.hours-info {
+  margin-top: 0;
+  margin-bottom: 0;
+  cursor: default;
+  .popover-container {
+    ul.card-body {
+      padding-top: .6rem;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
 }
 .card-body ul.hours-info li:first-child {
