--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -1,3 +1,4 @@
+{{#unless @root.data.isAdmin ~}}
 <div class="container achievements">
   {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
   <ul class="step">
@@ -97,3 +98,4 @@
   {{/ifAny ~}}
   {{/each ~}}
 </div>
+{{/unless ~}}
