--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="columns">
-    <div class="column col-8 col-xl-12">
+    <div class="column col-9 col-xl-12">
       <h2>
         {{#if @root.data.isAdmin ~}}
         Group volunteering details
@@ -8,10 +8,6 @@
         My volunteering details
         {{/if ~}}
       </h2>
-
-      {{#unless @root.data.isAdmin ~}}
-      {{> log_age_limit}}
-      {{/unless ~}}
 
       {{!-- <div class="bg-warning x-padding"> --}}
         <h4 class="no-margin">Checklist: What is volunteering?</h4>
@@ -26,6 +22,12 @@
           </li>
         </ul>
       {{!-- </div> --}}
+
+      {{#unless @root.data.isAdmin ~}}
+      {{> log_age_limit}}
+      {{/unless ~}}
+
+      <div class="divider v-margin-full"></div>
 
       <form id="task-details-form" class="active-form" action="/submit-task-details" method="POST" data-component="TasksTrigger" {{#if @root.data.isAdmin}}data-success-destination="/hours/" data-destination-include-id="true"{{else}}data-success-destination="/hours"{{/if}} data-TasksTrigger="ajax-form-handler">
         <input type="hidden" name="task_type" value="{{#if @root.data.isAdmin}}Group Task{{else}}Individual Task{{/if}}">
@@ -82,11 +84,42 @@
               <textarea rows="4" cols="40" id="task_description" name="task_description" class="form-input" value="{{@root.data.taskInfo.task_description}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_description}}></textarea>
             </div>
           </div>
+          <div class="form-group">
+            <div class="column col-4 col-md-12">
+              <label for="un_sustainable_development_goals" class="form-label r-margin">
+                Which UN Sustainable Development Goals does this volunteering contribute towards? (optional)
+              </label>
+            </div>
+            <div class="column col-8 col-md-12">
+              <div class="dropdown">
+                <a href="#" class="btn btn-primary dropdown-toggle" tabindex="0">
+                  Select Sustainable Development Goals <span class="far fa-angle-down"></span>
+                </a>
+                <ul class="menu">
+                  {{#each @root.context.metaData.globalGoals ~}}
+                  <li class="menu-item">
+                    <label class="form-checkbox">
+                      <input type="checkbox" name="un_sustainable_development_goals" value="{{title}}" />
+                      <span class="form-icon"></span> <span class="label label-primary" style="background-color:{{> sdg_color sdg=title}}">{{> sdg_number sdg=title}}</span> {{title}}
+                    </label>
+                  </li>
+                  {{/each ~}}
+                </ul>
+              </div>
+
+              {{!-- <select class="form-select" id="un_sustainable_development_goals" name="un_sustainable_development_goals">
+                <option value="" selected></option>
+                {{#each @root.context.metaData.globalGoals ~}}
+                <option value="{{title}}">{{add @key 1}}: {{title}}</option>
+                {{/each ~}}
+              </select> --}}
+            </div>
+          </div>
         </div>
 
         <div class="divider v-margin-full"></div>
 
-        <h2>Volunteer manager</h2>
+        <h4>Volunteer manager</h4>
 
         <div class="form-horizontal">
           <div class="form-group">
@@ -172,21 +205,6 @@
                 >
             </div>
           </div>
-          <div class="form-group">
-            <div class="column col-4 col-md-12">
-              <label for="un_sustainable_development_goals" class="form-label r-margin">
-                Which UN Sustainable Development Goal does this task match? (optional)
-              </label>
-            </div>
-            <div class="column col-8 col-md-12">
-              <select class="form-select" id="un_sustainable_development_goals" name="un_sustainable_development_goals">
-                <option value="" selected></option>
-                {{#each @root.context.metaData.globalGoals ~}}
-                <option value="{{title}}">{{add @key 1}}: {{title}}</option>
-                {{/each ~}}
-              </select>
-            </div>
-          </div>
         </div>
         <div class="form-horizontal">
           <div class="form-group">
@@ -235,10 +253,10 @@
         "#organisation_charity_number": { value: "" }
       }
     }
-    {
-      type: "run",
-      config: { code: "metadata.instance.clearSelection()" }
-    }
+    // {
+    //   type: "run",
+    //   config: { code: "metadata.instance.clearSelection()" }
+    // }
   ],
   datasets: [
     {
