--- a/src/main.scss
+++ b/src/main.scss
@@ -234,6 +234,7 @@ a.btn-link:hover {
     cursor: default;
     border: 1px solid rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
+    box-shadow: 0 0.05rem 0.2rem rgba(16,24,58,0.3);
     width: 100%;
     h3,
     h4 {
