--- a/configuration/templates/page/home-authenticated.hbs
+++ b/configuration/templates/page/home-authenticated.hbs
@@ -12,7 +12,7 @@
     {{/compare ~}}
   </p>
   <div class="empty-action">
-    <a href="/groups" class="btn btn-primary">Volunteering groups</a>
+    <a href="/groups" class="btn btn-primary">Manage groups</a>
   </div>
   {{else}}
   {{!-- Volunteer --}}
