--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -241,9 +241,9 @@
               </div>
             </div>
             <div class="column col-2 col-xl-3 col-lg-2 col-md-3 col-sm-6 col-xs-5">
-              {{#if claim_code ~}}
+              {{#ifAll claim_code (compare hours "!==" 0) (compare hours "!==" 999) ~}}
               <mark class="claim-code">{{substr claim_code 0 10}}</mark>
-              {{/if ~}}
+              {{/ifAll ~}}
             </div>
             <div class="column col-1 col-xl-2 col-lg-2 col-md-3 col-sm-4">
               {{#if claim_code ~}}
