save button colour

--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -247,7 +247,7 @@
             </div>
             <div class="column col-1 col-xl-2 col-lg-2 col-md-3 col-sm-4">
               {{#if claim_code ~}}
-              <button type="submit" class="btn btn-primary btn-block inline-update-button b-margin" style="display:none;">Save</button>
+              <button type="submit" class="btn btn-success btn-block inline-update-button b-margin" style="display:none;">Save</button>
               {{/if ~}}
             </div>
             <div class="column col-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
