--- a/configuration/templates/account/auth/sign-up-details.hbs
+++ b/configuration/templates/account/auth/sign-up-details.hbs
@@ -3,9 +3,9 @@
 
   <h3 class="b-margin-full">
     {{#unless @root.request.params.query.redirect ~}}
-      Thank you for signing up to the Saltire Awards! Please add your details below
+      Thank you for signing up to the Saltire Awards, please add your details
     {{else}}
-      In order to use this site you need to complete your user details, please complete these below
+      In order to use this site you need to add your details
     {{/unless ~}}
   </h3>
 
